<resources>
    <string name="app_name">收银机</string>
    <string name="test_btn">测试语言</string>
    <string name="download_btn">测试下载</string>
    <string name="input_e_number">请输入工号</string>
    <string name="input_e_psw">请输入密码</string>
    <string name="cash_login">登录</string>
    <string name="cash_empty_psw">请输入密码</string>
    <string name="cash_empty_name">请输入工号</string>
    <string name="table">桌台</string>
    <string name="orders">订单</string>
    <string name="menbers">会员</string>
    <string name="book_off">交班</string>
    <string name="print">打印</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="menbers_recharge_detail">会员储值明细</string>
    <string name="consumes_detail">会员消费明细</string>
    <string name="menbers_setting">会员权益设置</string>
    <string name="menber_detail_title">会员详情</string>
    <string name="recharge_fragment_search_tv">搜索：</string>
    <string name="recharge_time">充值时间：</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="last_seven_days">最近7天</string>
    <string name="search">搜索</string>
    <string name="clean">清空</string>
    <string name="total_num_tv">查询到 5 笔记录</string>
    <string name="rechare_vlaue">储值金额</string>
    <string name="rechare_real_money">储值实收</string>
    <string name="rechare_pre">储值赠送</string>
    <string name="consume_receivable">应收金额</string>
    <string name="consume_not_recharge_money">非储值实收</string>
    <string name="consume_recharge_money">储值实收</string>
    <string name="consume_recharge_give">储值赠送</string>
    <string name="member_grouth_num">成长值</string>
    <string name="integral_balance">积分余额</string>
    <string name="stored_value_balance">储值余额</string>
    <string name="membership_assignment">会员归属</string>
    <string name="member_status">状态</string>
    <string name="recharge">充值</string>
    <string name="member_name">姓名</string>
    <string name="member_birthday">生日</string>
    <string name="creat_card_time">开卡时间</string>
    <string name="consume_num">消费次数</string>
    <string name="consume_amount">累计消费金额</string>
    <string name="last_cosume_time">最近消费时间</string>
    <string name="update_member">修改会员资料</string>
    <string name="report">挂失/冻结</string>
    <string name="refund">退款</string>
    <string name="card_replacement">换卡</string>
    <string name="cancellation">注销</string>
    <string name="coupons_available">可用优惠券(%s)</string>
    <string name="add_card_title">会员制卡</string>
    <string name="card_range">卡号范围</string>
    <string name="card_num">卡号</string>
    <string name="make_card">制卡(只能制未绑定的卡)</string>
    <string name="moblie_phone">手机号码</string>
    <string name="new_member">新增会员</string>
    <string name="ordersheet_app_name">点单机</string>
    <string name="ordersheet_empty_psw">请输入密码</string>
    <string name="ordersheet_empty_name">请输入工号</string>
    <string name="ordersheet_login">登录</string>
    <string name="ordersheet_table_left_notice">选中桌台，开始点菜</string>
    <string name="ordersheet_choose_time">选择时间</string>
    <string name="ordersheet_today">今天</string>
    <string name="ordersheet_yesterday">昨天</string>
    <string name="ordersheet_last_seven_days">最近七天</string>
    <string name="ordersheet_setmeal_dec">套餐包含 %s 个商品，已选 %s 份 </string>
</resources>
