<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@id/money_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:orientation="vertical">

        <TextView
            android:id="@id/records_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:text="@string/total_num_tv"
            android:textColor="#464C5B"
            android:textSize="@dimen/member_tabl_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:text="@string/rechare_vlaue"
                    android:textColor="#657180"
                    android:textSize="@dimen/member_tabl_text_size" />

                <TextView
                    android:id="@id/recharge_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColor="#464C5B"
                    android:textSize="@dimen/rechare_text_size"
                    android:textStyle="bold"
                    tools:text="¥3000.00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:text="@string/rechare_real_money"
                    android:textColor="#657180"
                    android:textSize="@dimen/member_tabl_text_size" />

                <TextView
                    android:id="@id/recharge_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColor="#464C5B"
                    android:textSize="@dimen/rechare_text_size"
                    android:textStyle="bold"
                    tools:text="¥3000.00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:text="@string/rechare_pre"
                    android:textColor="#657180"
                    android:textSize="@dimen/member_tabl_text_size" />

                <TextView
                    android:id="@id/recharge_give"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColor="#464C5B"
                    android:textSize="@dimen/rechare_text_size"
                    android:textStyle="bold"
                    tools:text="¥3000.00" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>